# fact-rs

./: Cargo.toml  README.md
data/: macos_versions.txt  windows_versions.txt
src/: components.rs  filesystem.rs  lib.rs
src/components/: cpu.rs  kernel.rs  memory.rs  mount.rs  network.rs  os.rs  uptime.rs
