[package]
name = "fact-rs"
version = "0.1.1"
edition = "2024"
description = "System facts, shipped to your door!"
repository = "https://github.com/caravel-io/fact-rs"
readme = "README.md"
keywords = ["facts", "system", "information"]
categories = ["command-line-utilities"]
license = "GPL-2.0-or-later"

[[bin]]
name = "factrs"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
default = ["cli"]
cli = ["dep:tracing-subscriber"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", optional = true }

[dev-dependencies]
tempfile = "3.27.0"

